# django_crm

./: .gitignore  .pre-commit-config.yaml  README.md  example.env  pyproject.toml  rav.yaml  requirements.prod.txt  requirements.txt
src/: manage.py
src/contacts/: apps.py  models.py  services.py  signals.py  views.py
src/contacts/management/commands/: sync_contacts.py
src/contacts/migrations/: 0001_initial.py  0002_contact_user.py  0003_contact_notes.py  0004_contact_last_edited_by_alter_contact_user.py  0005_contact_created_at_contact_update_at.py  0006_contact_first_name_contact_lastfirst_name_and_more.py  0007_contact_last_sync.py
src/dashboard/: views.py
src/dchome/: asgi.py  settings.py  urls.py  wsgi.py
src/events/: handlers.py  models.py  services.py  signals.py
src/events/migrations/: 0001_initial.py  0002_alter_event_type.py  0002_remove_event_name.py  0003_alter_event_type.py  0003_event_user.py  0004_remove_event_timestamp_event_time.py  0005_alter_event_type.py
src/helpers/: mygoogler.py
src/templates/: about.html  base.html  dashboard.html
src/templates/contacts/: detail.html  list.html
src/templates/contacts/snippets/: contact-card.html
src/templates/dashboard/: base.html  nav.html
