[project]
name = "django-crm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
classifiers = [ "Programming Language :: Python :: 3 :: Only" ]
dependencies = [
  "django>=5.2,<6",
  "django-googler>=0.0.20",
  "pre-commit>=4.3",
]

[dependency-groups]
dev = [
  "pip>=25.3",
]
